--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
       name="viewport"
       content="width=device-width, initial-scale=1" />
     <meta
+      http-equiv="Content-Security-Policy"
+      content="upgrade-insecure-requests" />
+    <meta
       name="theme-color"
       content="#000000" />
     <meta
