--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <link
-      rel="icon"
-      href="%PUBLIC_URL%/favicon.ico" />
+      rel="stylesheet"
+      href="./favicon.ico"
+      type="image/x-icon" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1" />
@@ -46,7 +47,7 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet" />
-    <title>React App</title>
+    <title>My Youtube</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
